Contract Configurator 1.3.4
- Fixed rare NRE in ContractVesselTracker (thanks Morashtak).
- Fixed loading of duplicate Contract Types (thanks jakkarth).
- Fixed issue where random orbits aren't so random (thanks KerbMav).

Contract Configurator 1.3.3
- Fixed issue with some load errors getting thrown as an exception.
- Fixed exception when docking with the claw (thanks SirJodelstein).
- Fixed experiment filtering logic for Field Research (thanks Aelfhe1m and HarlyKin).

Contract Configurator 1.3.2
- Major rewrite of contract generation logic to improve performance and reduce latency on contract generation while in flight.
- Contract pre-loader now allows pausing between attributes (reduces latency during contract generation).
- Added Vessel.Location() method for expressions.
- Fixed NRE in RecoverKerbal (thanks severedsolo).
- Added AcceptContract requirement.
- Now validates for empty values when parsing contracts.
- Fixed issues with ContractVesselTracker logic for spawned vessels (thanks SirJodelstein).
- Fixed support for grappling in ContractVesselTracker (thanks SirJodelstein).
- Fixed incompatibility with KRPC (thanks OvermindDL1).
- Fixed NRE issue with RecoverKerbal (thanks severedsolo).
- Fixed exception in ReachSpecificOrbit (thanks KerbMav).
- Fixed exception when generation contracts (thanks KerbMav).

Contract Configurator 1.2.6
- Added AvailableExperiments() expression to better filter experiments.
- Added Mass, XDimension, YDimension, ZDimension, SmallestDimension and LargetDimension to Vessel expressions.
- Fixed BioDrill experiments to only be offered where there's an atmosphere.
- Fixed rare NullReferenceException in contract generation logic (thanks OakTree42).
- Remove exploit that allows RecoverKerbal to be completed early in Tourism and other contracts (thanks veryinky).

Contract Configurator 1.2.5
- Fixed NullReferenceException in CompleteContractRequirement (thanks severedsolo).